2005-07-03  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added missing manage_purgeForm
   * 1.0.5 beta release
	
2005-06-30  Martin Aspeli (optilude)

   * (Actions/TraverseToAction.py, Actions/RedirectToAction.py) Fixed
     action handling for CMF 1.5 method aliases.
	
2005-06-11  Leonard Norrgard  <vinsci@refactor.fi>

   * (Actions/TraverseTo.py): Corrected docs for traverse_to.

2004-11-27  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * 1.0.4 release
	
2004-11-07  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed handling of image buttons
	
2004-10-17  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added tutorial from the Plone Conference to /documentation

   * Fixed copying of actions and validators when objects are renamed / copied /
     pasted.

   * Added a new tab on portal_form_controller to handle outdated overrides.

   * Added a few unit tests.

   * Updated the version to 1.0.4 alpha

2004-07-10  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Made previous fixes play nicely with Python 2.1
   
   * Got rid of some code in manage_afterAdd that caused problems during site imports

2004-06-15  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified filesystem objects so that they check for updates to .metadata
     files in debug mode.  A change in a .metadata file causes the file to
     be reloaded and reparsed.  The new methods are in FSControllerBase.py.

   * Added a check for a common action/validator bug:
     In IE, you can submit a form using the Return key.  The result is that no
     button is clicked.  If you specify actions for, say, success..Button1 and
     success..Button2, but the user submits the form using the Return key,
     you will get an exception because no next action is found.  The new check 
     makes sure that you specify a default next action in the event of no button
     pressed.

2004-03-12  Geoff Davis <geoff@geoffdavis.net> (plonista)
