@@ -1,3 +1,7 @@
+2005-07-24 Hanno Schlichting <schlichting@bakb.net> (hannosch)
+
+   * Added a runalltests.py to tests folder
+
 2005-07-03  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
    * Added missing manage_purgeForm
